# uv-aws-lambda-example

./: Dockerfile  README.md  pyproject.toml
